@@ -44,6 +44,7 @@ import com.dabomstew.pkrandom.pokemon.*;
 import com.dabomstew.pkrandom.pokemon.CopyUpEvolutionsHelper;
 import com.dabomstew.pkrandom.pokemon.CopyUpEvolutionsHelper.BasicPokemonAction;
 import com.dabomstew.pkrandom.pokemon.CopyUpEvolutionsHelper.EvolvedPokemonAction;
+import com.dabomstew.pkrandom.romhandlers.romentries.RomEntry;
 
 import java.io.PrintStream;
 import java.util.*;
@@ -298,6 +299,18 @@ public abstract class AbstractRomHandler implements RomHandler {
 	public PokemonSet<Pokemon> getPokemonSetInclFormes() {
 	    return new PokemonSet<>(getPokemonInclFormes()); // TODO: unmodifiable?
 	}
+
+    @Override
+    public PokemonSet<Pokemon> getRestrictedPokemon() {
+        checkPokemonRestrictions();
+        return restrictedPokemon;
+    }
+
+    @Override
+    public PokemonSet<Pokemon> getRestrictedPokemonInclAltFormes() {
+        checkPokemonRestrictions();
+        return restrictedPokemonInclAltFormes;
+    }
 
 	private PokemonSet<Pokemon> getRestrictedPokemon(boolean noLegendaries, boolean allowAltFormes, boolean allowCosmeticFormes) {
 	    PokemonSet<Pokemon> allowedPokes = new PokemonSet<>();
@@ -638,7 +651,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                             tempPickable.addAll(noLegendaries ?
                                     nonlegendaryPokemonInclFormes :
                                     restrictedPokemonInclAltFormes);
-                            tempPickable.removeIf(o -> ((Pokemon) o).isActuallyCosmetic());
+                            tempPickable.removeIf(Pokemon::isActuallyCosmetic);
                         } else {
                             tempPickable.addAll(noLegendaries ? getNonlegendaryPokemon() : restrictedPokemon);
                         }
@@ -664,7 +677,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                             if (allowAltFormes) {
                                 allPokes.addAll(noLegendaries ? nonlegendaryPokemonInclFormes :
                                         restrictedPokemonInclAltFormes);
-                                allPokes.removeIf(o -> ((Pokemon) o).isActuallyCosmetic());
+                                allPokes.removeIf(Pokemon::isActuallyCosmetic);
                             } else {
                                 allPokes.addAll(noLegendaries ? getNonlegendaryPokemon() : restrictedPokemon);
                             }
@@ -788,7 +801,6 @@ public abstract class AbstractRomHandler implements RomHandler {
             List<EncounterSet> collapsedEncounters = collapseAreasORAS(currentEncounters);
             area1to1EncountersImpl(collapsedEncounters, settings);
             setEncounters(useTimeOfDay, currentEncounters);
-            return;
         } else {
             area1to1EncountersImpl(currentEncounters, settings);
             setEncounters(useTimeOfDay, currentEncounters);
@@ -1440,6 +1452,7 @@ public abstract class AbstractRomHandler implements RomHandler {
 
     @Override
     public void randomizeTrainerPokes(Settings settings) {
+        // TODO: adding pokémon to just boss/important trainers is seemingly broken (is it in main ZX too?)
         boolean usePowerLevels = settings.isTrainersUsePokemonOfSimilarStrength();
         boolean weightByFrequency = settings.isTrainersMatchTypingDistribution();
         boolean noLegendaries = settings.isTrainersBlockLegendaries();
@@ -2002,8 +2015,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                         .filter(ml -> ml.level <= tp.level)
                         .filter(ml -> this.random.nextDouble() < preEvoMoveProbability)
                         .map(ml -> moves.get(ml.move))
-                        .distinct()
-                        .collect(Collectors.toList()));
+                        .distinct().toList());
             }
         }
 
@@ -2054,8 +2066,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                 moveSelectionPoolAtLevel.addAll(allEggMoves.get(firstEvo.getNumber())
                         .stream()
                         .filter(egm -> this.random.nextDouble() < eggMoveProbability)
-                        .map(moves::get)
-                        .collect(Collectors.toList()));
+                        .map(moves::get).toList());
             }
         }
 
@@ -2244,12 +2255,10 @@ public abstract class AbstractRomHandler implements RomHandler {
 
                 List<Move> physicalMoves = new ArrayList<>(movesAtLevel)
                         .stream()
-                        .filter(mv -> mv.category == MoveCategory.PHYSICAL)
-                        .collect(Collectors.toList());
+                        .filter(mv -> mv.category == MoveCategory.PHYSICAL).toList();
                 List<Move> specialMoves = new ArrayList<>(movesAtLevel)
                         .stream()
-                        .filter(mv -> mv.category == MoveCategory.SPECIAL)
-                        .collect(Collectors.toList());
+                        .filter(mv -> mv.category == MoveCategory.SPECIAL).toList();
 
                 if (atkSpatkRatio < 1 && specialMoves.size() > 0) {
                     atkSpatkRatio = 1 / atkSpatkRatio;
@@ -2292,8 +2301,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                         List<Move> requiresOtherMove = movesAtLevel
                                 .stream()
                                 .filter(mv -> GlobalConstants.requiresOtherMove.contains(mv.number))
-                                .distinct()
-                                .collect(Collectors.toList());
+                                .distinct().toList();
 
                         for (Move dependentMove: requiresOtherMove) {
                             boolean hasRequiredMove = false;
@@ -2437,8 +2445,7 @@ public abstract class AbstractRomHandler implements RomHandler {
 
         List<Move> requiresOtherMove = movesAtLevel
                 .stream()
-                .filter(mv -> GlobalConstants.requiresOtherMove.contains(mv.number))
-                .collect(Collectors.toList());
+                .filter(mv -> GlobalConstants.requiresOtherMove.contains(mv.number)).toList();
 
         for (Move dependentMove: requiresOtherMove) {
             if (MoveSynergy.requiresOtherMove(dependentMove, movesAtLevel).isEmpty()) {
@@ -2503,13 +2510,12 @@ public abstract class AbstractRomHandler implements RomHandler {
                                         mv.absorbPercent >= mv2.absorbPercent &&
                                         !mv.isChargeMove &&
                                         !mv.isRechargeMove) ||
-                                mv2.power * mv2.hitCount <= 30) &&
+                                        mv2.power * mv2.hitCount <= 30) &&
                                 mv.hitratio >= mv2.hitratio &&
                                 mv.category == mv2.category &&
                                 mv.priority >= mv2.priority &&
                                 mv2.power > 0 &&
-                                mv.power * mv.hitCount > mv2.power * mv2.hitCount)
-                        .collect(Collectors.toList());
+                                mv.power * mv.hitCount > mv2.power * mv2.hitCount).toList();
 //                for (Move obsoleted: obsoleteThis) {
 //                    System.out.println(obsoleted.name + " obsoleted by " + mv.name);
 //                }
@@ -2529,8 +2535,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                                 otherMv.power <= 0 &&
                                 otherMv.statChangeMoveType == mv.statChangeMoveType &&
                                 (otherMv.statusType == mv.statusType ||
-                                otherMv.statusType == StatusType.NONE))
-                        .collect(Collectors.toList())) {
+                                        otherMv.statusType == StatusType.NONE)).toList()) {
                     List<Move.StatChange> statChanges2 = new ArrayList<>();
                     for (Move.StatChange sc: mv2.statChanges) {
                         if (sc.type != StatChangeType.NONE) {
@@ -2542,8 +2547,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                     }
                     List<Move.StatChange> statChanges1Filtered = statChanges1
                             .stream()
-                            .filter(sc -> !statChanges2.contains(sc))
-                            .collect(Collectors.toList());
+                            .filter(sc -> !statChanges2.contains(sc)).toList();
                     statChanges2.removeAll(statChanges1);
                     if (!statChanges1Filtered.isEmpty() && statChanges2.isEmpty()) {
                         if (!GlobalConstants.cannotBeObsoletedMoves.contains(mv2.number)) {
@@ -3495,7 +3499,7 @@ public abstract class AbstractRomHandler implements RomHandler {
                                    Map<Type, List<Move>> validTypeMoves, Map<Type, List<Move>> validTypeDamagingMoves) {
         List<Move> allMoves = this.getMoves();
         List<Integer> hms = this.getHMMoves();
-        Set<Integer> allBanned = new HashSet<Integer>(noBroken ? this.getGameBreakingMoves() : Collections.emptySet());
+        Set<Integer> allBanned = new HashSet<>(noBroken ? this.getGameBreakingMoves() : Collections.emptySet());
         allBanned.addAll(hms);
         allBanned.addAll(this.getMovesBannedFromLevelup());
         allBanned.addAll(GlobalConstants.zMoves);
@@ -3541,7 +3545,7 @@ public abstract class AbstractRomHandler implements RomHandler {
             totalAvgPower += (avgTypePower);
         }
 
-        totalAvgPower /= (double)validTypeMoves.keySet().size();
+        totalAvgPower /= validTypeMoves.keySet().size();
 
         // Want the average power of each type to be within 25% both directions
         double minAvg = totalAvgPower * 0.75;
@@ -3666,9 +3670,7 @@ public abstract class AbstractRomHandler implements RomHandler {
         // tms
         List<Integer> tmMoves = this.getTMMoves();
 
-        for (int i = 0; i < tmMoves.size(); i++) {
-            tmMoves.set(i, Moves.metronome);
-        }
+        Collections.fill(tmMoves, Moves.metronome);
 
         this.setTMMoves(tmMoves);
 
@@ -3676,9 +3678,7 @@ public abstract class AbstractRomHandler implements RomHandler {
         if (this.hasMoveTutors()) {
             List<Integer> mtMoves = this.getMoveTutorMoves();
 
-            for (int i = 0; i < mtMoves.size(); i++) {
-                mtMoves.set(i, Moves.metronome);
-            }
+            Collections.fill(mtMoves, Moves.metronome);
 
             this.setMoveTutorMoves(mtMoves);
         }
@@ -3831,6 +3831,10 @@ public abstract class AbstractRomHandler implements RomHandler {
         return pickedStarters;
     }
 
+    @Override
+    public boolean canChangeStaticPokemon() {
+        return getRomEntry().hasStaticPokemonSupport();
+    }
 
     @Override
     public void randomizeStaticPokemon(Settings settings) {
@@ -4560,7 +4564,7 @@ public abstract class AbstractRomHandler implements RomHandler {
         List<Integer> mts = this.getMoveTutorMoves();
 
         // Empty list
-        List<Integer> priorityTutors = new ArrayList<Integer>();
+        List<Integer> priorityTutors = new ArrayList<>();
 
         if (followEvolutions) {
 			copyUpEvolutionsHelper.apply(true, true,
@@ -4664,10 +4668,10 @@ public abstract class AbstractRomHandler implements RomHandler {
 
         // index 0 = singles, 1 = doubles
         List<String>[] allTrainerNames = new List[] { new ArrayList<String>(), new ArrayList<String>() };
-        Map<Integer, List<String>> trainerNamesByLength[] = new Map[] { new TreeMap<Integer, List<String>>(),
+        Map<Integer, List<String>>[] trainerNamesByLength = new Map[] { new TreeMap<Integer, List<String>>(),
                 new TreeMap<Integer, List<String>>() };
 
-        List<String> repeatedTrainerNames = Arrays.asList(new String[] { "GRUNT", "EXECUTIVE", "SHADOW", "ADMIN", "GOON", "EMPLOYEE" });
+        List<String> repeatedTrainerNames = Arrays.asList("GRUNT", "EXECUTIVE", "SHADOW", "ADMIN", "GOON", "EMPLOYEE");
 
         // Read name lists
         for (String trainername : customNames.getTrainerNames()) {
@@ -4789,8 +4793,8 @@ public abstract class AbstractRomHandler implements RomHandler {
         }
 
         // index 0 = singles, index 1 = doubles
-        List<String> allTrainerClasses[] = new List[] { new ArrayList<String>(), new ArrayList<String>() };
-        Map<Integer, List<String>> trainerClassesByLength[] = new Map[] { new HashMap<Integer, List<String>>(),
+        List<String>[] allTrainerClasses = new List[] { new ArrayList<String>(), new ArrayList<String>() };
+        Map<Integer, List<String>>[] trainerClassesByLength = new Map[] { new HashMap<Integer, List<String>>(),
                 new HashMap<Integer, List<String>>() };
 
         // Read names data
@@ -7086,5 +7090,22 @@ public abstract class AbstractRomHandler implements RomHandler {
 	protected abstract boolean saveRomFile(String filename, long seed);
 	
 	protected abstract boolean saveRomDirectory(String filename);
+
+    protected abstract RomEntry getRomEntry();
+
+    @Override
+    public String getROMName() {
+        return "Pokemon " + getRomEntry().getName();
+    }
+
+    @Override
+    public String getROMCode() {
+        return getRomEntry().getRomCode();
+    }
+
+    @Override
+    public String getSupportLevel() {
+        return getRomEntry().hasStaticPokemonSupport() ? "Complete" : "No Static Pokemon";
+    }
 	
 }
